--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -3,6 +3,15 @@ $color-dark: darken($primary-color, 10);
 
 $nav-height: 45px;
 
+#app-container {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: calc(100vh - #{$nav-height});
+  width: 100vw;
+  overflow-y: scroll;
+}
+
 #nav-container {
   position: fixed;
   background-color: $primary-color;
