Sets inputs as blocks

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,7 +1,12 @@
 $primary-color: #9d6697;
 $color-dark: darken($primary-color, 10);
-
 $nav-height: 45px;
+
+form {
+  input {
+    display: block;
+  }
+}
 
 #app-container {
   position: fixed;
