--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -43,9 +43,69 @@ form {
     &.active {
       background-color: $color-dark;
     }
-    
+
     &:hover {
       background-color: $color-light;
+    }
+
+  }
+}
+
+.share-card {
+  display: flex;
+  height: calc(100vh - #{$nav-height});
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+
+  a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    height: $nav-height;
+    width: $nav-height;
+    color: #fff;
+    text-decoration: none;
+    border: 2px solid #fff;
+
+    &.sms {
+      background-color: #6fe490;
+
+      &:hover {
+        background-color: lighten(#6fe490, 10);
+      }
+    }
+
+    &.email {
+      background-color: #6699FF;
+
+      &:hover {
+        background-color: lighten(#6699FF, 10);
+      }
+    }
+
+    &.googleplus {
+      background-color: #dd4b39;
+
+      &:hover {
+        background-color: lighten(#dd4b39, 10);
+      }
+    }
+
+    &.facebook {
+      background-color: #3b5998;
+
+      &:hover {
+        background-color: lighten(#3b5998, 10);
+      }
+    }
+
+    &.twitter {
+      background-color: #00aced;
+
+      &:hover {
+        background-color: lighten(#00aced, 10);
+      }
     }
 
   }
