--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,3 +1,8 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
+
 $primary-color: #d99c5a;
 $color-dark: darken($primary-color, 10);
 $color-light: lighten($primary-color, 10);
@@ -112,7 +117,6 @@ form {
 }
 
 #map {
-  width: 100%;
-  height: 300px;
+  height: calc(100vh - #{$nav-height});
+  width: 100vw;
 }
-
