--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -14,6 +14,17 @@ form {
   }
 }
 
+// Makes circle buttons
+.circle {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  height: $nav-height;
+  width: $nav-height;
+  text-decoration: none;
+}
+
 #app-container {
   position: fixed;
   left: 0;
