--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -131,3 +131,20 @@ form {
   height: calc(100vh - #{$nav-height});
   width: 100vw;
 }
+
+.create-button-container {
+  position: absolute;;
+  left: calc(100vw - (#{$nav-height} * 1.5));
+  top: calc(#{$nav-height} * 0.5);
+
+  a {
+    // this color will obviously be changed
+    color: #000;
+    background-color: #c9d63e;
+    box-shadow: 0px 0px 5px #888888;
+
+    &:hover {
+      background-color: lighten(#c9d63e, 10);
+    }
+  }
+}
