--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -140,11 +140,11 @@ form {
   a {
     // this color will obviously be changed
     color: #000;
-    background-color: #c9d63e;
+    background-color: #7de264;
     box-shadow: 0px 0px 5px #888888;
 
     &:hover {
-      background-color: lighten(#c9d63e, 10);
+      background-color: lighten(#7de264, 10);
     }
   }
 }
