--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -36,7 +36,7 @@ body {
   position: fixed;
   left: 0;
   top: 0;
-  height: calc(100vh - #{$nav-height});
+  height: calc(100% - #{$nav-height});
   width: 100vw;
   overflow-y: scroll;
 }
@@ -45,7 +45,7 @@ body {
   position: fixed;
   background-color: $primary-color;
   height: $nav-height;
-  top: calc(100vh - #{$nav-height});
+  top: calc(100% - #{$nav-height});
   left: 0;
   width: 100vw;
 
@@ -76,7 +76,7 @@ body {
 
 .share-card {
   display: flex;
-  height: calc(100vh - #{$nav-height});
+  height: calc(100% - #{$nav-height});
   width: 100vw;
   justify-content: center;
   align-items: center;
@@ -135,7 +135,7 @@ body {
 }
 
 #map {
-  height: calc(100vh - #{$nav-height});
+  height: calc(100% - #{$nav-height});
   width: 100vw;
 }
 
