--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -10,6 +10,7 @@ $primary-color: #d99c5a;
 $color-dark: darken($primary-color, 10);
 $color-light: lighten($primary-color, 10);
 $nav-height: 45px;
+$app-view-height: calc(100% - #{$nav-height});
 
 form {
   input {
@@ -36,7 +37,7 @@ body {
   position: fixed;
   left: 0;
   top: 0;
-  height: calc(100% - #{$nav-height});
+  height: $app-view-height;
   width: 100vw;
   overflow-y: scroll;
 }
@@ -45,7 +46,7 @@ body {
   position: fixed;
   background-color: $primary-color;
   height: $nav-height;
-  top: calc(100% - #{$nav-height});
+  top: $app-view-height;
   left: 0;
   width: 100vw;
 
@@ -76,7 +77,7 @@ body {
 
 .share-card {
   display: flex;
-  height: calc(100% - #{$nav-height});
+  height: $app-view-height;
   width: 100vw;
   justify-content: center;
   align-items: center;
@@ -135,7 +136,7 @@ body {
 }
 
 #map {
-  height: calc(100% - #{$nav-height});
+  height: $app-view-height;
   width: 100vw;
 }
 
