--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -135,9 +135,22 @@ body {
   }
 }
 
-#map {
-  height: $app-view-height;
+#map, .map-view-container {
+  height: calc(100vh - #{$nav-height});
   width: 100vw;
+}
+
+.welcome-container {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+
+  h1, h2, p {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .create-button-container {
