--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -40,6 +40,7 @@ body {
   height: $app-view-height;
   width: 100vw;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 #nav-container {
