--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -5,7 +5,6 @@
   display: none;
 }
 
-
 $primary-color: #d99c5a;
 $color-dark: darken($primary-color, 10);
 $color-light: lighten($primary-color, 10);
@@ -154,7 +153,7 @@ body {
   }
 }
 
-.create-button-container, .refresh-button-container, .center-button-container{
+.create-button-container, .refresh-button-container, .center-button-container, .reset-button-container {
   position: absolute;
   top: calc(#{$nav-height} * 0.5);
 
@@ -183,6 +182,9 @@ body {
   top: calc(100% - (#{$nav-height} * 0.5));
 }
 
+.reset-button-container {
+  left: calc(100vw - (#{$nav-height} * 1.5));
+}
 
 // Everything from here down can likely be removed when Material-UI is implimented
 form {
@@ -208,9 +210,13 @@ form {
 }
 
 #create-map {
-  width: 97vw;
-  height: 200px;
-  margin: 20px;
+  width: 100vw;
+  height: calc(100vh / 2.50);
+}
+
+.create-map-view-container {
+  width: 100vw;
+  height: calc(100vh / 2.50);
 }
 
 .gps-found {
