Refresh button spins when refreshing

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -32,6 +32,12 @@ body {
   text-decoration: none;
 }
 
+.spin {
+  -webkit-animation:spin 2s linear infinite;
+  -moz-animation:spin 2s linear infinite;
+  animation:spin 2s linear infinite;
+}
+
 #app-container {
   position: fixed;
   left: 0;
@@ -222,3 +228,7 @@ form {
 .gps-found {
   cursor: pointer;
 }
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
