--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -232,3 +232,12 @@ form {
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+
+.gmnoprint a, .gmnoprint span {
+  display:none;
+}
+
+.gmnoprint div {
+  background:none !important;
+}
