--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -32,6 +32,10 @@ body {
   text-decoration: none;
 }
 
+.hide {
+  display: none;
+}
+
 .spin {
   -webkit-animation:spin 2s linear infinite;
   -moz-animation:spin 2s linear infinite;
