Tidied up language on welcome screen and increased H1 font size.

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -161,6 +161,10 @@ body {
     width: 100%;
     text-align: center;
   }
+
+  h1{
+    font-size: 60px
+  }
 }
 
 .create-button-container, .refresh-button-container, .center-button-container, .reset-button-container {
