--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -249,3 +249,32 @@ form {
 .gmnoprint div {
   background:none !important;
 }
+
+.spot-view-container {
+  padding: 0 2em;
+  
+  h1 {
+    margin-top: 0;
+    font-size: 3em;
+    padding-top: 0;
+  }
+
+  .category-icon-container {
+    position: relative;
+    display: flex;
+    height: 3em;
+    width: 2em;
+    left: -2em;
+    top: 2em;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+
+
+
+
+
+
+
