--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -251,30 +251,27 @@ form {
 }
 
 .spot-view-container {
-  padding: 0 2em;
-  
-  h1 {
-    margin-top: 0;
-    font-size: 3em;
-    padding-top: 0;
+  padding: 0 3em;
+
+
+  .category-icon-container, .spot-name-container{
+    display: flex;
+    align-items: center;
+  }
+
+  .spot-name-container {
+    position: relative;
+    left: -3em;
   }
 
   .category-icon-container {
-    position: relative;
-    display: flex;
-    height: 3em;
-    width: 2em;
-    left: -2em;
-    top: 2em;
-    align-items: center;
+    width: auto;
     justify-content: center;
+    width: 2em;
+    font-size: 1.5em;
+  }
+
+  .spot-name {
+    font-size: 3em;
   }
 }
-
-
-
-
-
-
-
-
