--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -87,10 +87,11 @@ body {
 
 .share-card {
   display: flex;
-  height: $app-view-height;
+  height: 100%;
   width: 100vw;
   justify-content: center;
   align-items: center;
+  background-color: #fff;
 
   a {
     display: inline-flex;
@@ -167,7 +168,7 @@ body {
   }
 }
 
-.create-button-container, .refresh-button-container, .center-button-container, .reset-button-container {
+.create-button-container, .refresh-button-container, .center-button-container, .reset-button-container, .share-button-container {
   position: absolute;
   top: calc(#{$nav-height} * 0.5);
 
@@ -183,7 +184,7 @@ body {
   }
 }
 
-.create-button-container {
+.create-button-container, .share-button-container {
   left: calc(100vw - (#{$nav-height} * 1.5));
 }
 
@@ -270,4 +271,16 @@ form {
   .spot-name {
     font-size: 3em;
   }
+}
+
+.share-card-container {
+  position: absolute;
+  top: 100%;
+  height: 100%;
+  width: 100%;
+  -webkit-transition: all 1s;
+          transition: all 1s;}
+
+.show-share-card {
+  top: 0px;
 }
