(style) repositioned zoom controls in map view

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -294,5 +294,10 @@ form {
 .show-share-card {
   z-index: 1;
   opacity: 100;
+}
 
+#map-controls {
+  position: absolute;
+  left: calc(100vw - 21.25px);
+  top: calc(100vh - 52.5px);
 }
