(refactor) commented out css

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -296,8 +296,8 @@ form {
   opacity: 100;
 }
 
-#map-controls {
-  position: absolute;
-  left: calc(100vw - 21.25px);
-  top: calc(100vh - 52.5px);
-}
+// #map-controls {
+//   position: absolute;
+//   left: calc(100vw - 21.25px);
+//   top: calc(100vh - 52.5px);
+// }
