--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -9,6 +9,7 @@ $primary-color: #F26B34;
 $color-dark: darken($primary-color, 10);
 $color-light: lighten($primary-color, 10);
 $secondary-color: #FF5244;
+$secondary-light: lighten($secondary-color, 10);
 $nav-height: 45px;
 $app-view-height: calc(100% - #{$nav-height});
 
@@ -72,6 +73,8 @@ body {
     color: #fff;
     text-decoration: none;
     border-right: 1px solid $color-light;
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s;
 
     &:last-child {
       border: 0px;
@@ -192,9 +195,11 @@ body {
     color: #fff;
     background-color: $secondary-color;
     box-shadow: 0px 0px 5px #888888;
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s;
 
     &:hover {
-      background-color: lighten(#1B508C, 10);
+      background-color: $secondary-light;
     }
   }
 }
