--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -406,3 +406,44 @@ form {
     color: #f00;
   }
 }
+
+.profile-view {
+  max-width: 600px;
+  margin: auto;
+}
+
+.profile-header {
+  display: flex;
+  align-items: center;
+}
+
+.profile-picture {
+  border-radius: 100%;
+  width: 30vw;
+  max-width: 200px;
+  margin: 15px;
+}
+
+.profile-name {
+  display: inline-block;
+}
+
+.profile-bio {
+  padding: 10px;
+}
+
+.profile-stats {
+  width: 100%;
+  max-width: 600px;
+  text-align: center;
+  border-collapse: collapse;
+
+  .stat {
+    font-size: 60px;
+  }
+
+  .divider {
+    width: 0.5px;
+    background-color: black;
+  }
+}
