Added documentation for MapView, SearchView, SpotView, MapController.

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -563,20 +563,11 @@ form {
   }
 }
 
-.search-result-spot {
+.search-result-spot {}
 
+.search-result-profile {}
 
-
-}
-
-.search-result-profile {
-  .result-user-img {}
-  .result-username {}
-}
-
-.search-form {
-
-}
+.search-form {}
 
 .result-name {}
 
@@ -588,9 +579,6 @@ form {
   padding-right: 4%; 
 }
 
-.result-category {
-}
+.result-category {}
 
-.search-results-container {
-
-}
+.search-results-container {}
