(feat) creates new controller to follow user. Adds button to profile page to follow user

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -450,6 +450,13 @@ form {
   display: inline-block;
 }
 
+.follow-button {
+  display: block;
+  background-color: blue;
+  border-radius: 10px;
+  color: white;
+}
+
 .profile-bio {
   padding: 10px;
 }
