(style) removed logo from location search results

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -768,6 +768,11 @@ select {
   font-family: 'FontAwesome', Arial;
 }
 
+
 .map-view-userid {
   color: dodgerblue;
+}
+
+.pac-container:after {
+  display: none !important;
 }
