--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -194,7 +194,7 @@ body {
   -webkit-transition: all 1s;
           transition: all 1s;
 
-  position: absolute;
+  position: fixed;
   z-index: 900;
   top: calc(#{$nav-height} * 0.5);
 
@@ -463,9 +463,35 @@ form {
 
 .profile-picture {
   border-radius: 100%;
-  width: 30vw;
-  max-width: 200px;
+  width: 150px;
+  height: 150px;
   margin: 15px;
+  overflow: hidden;
+  background-size: cover;
+
+  .change-image-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    height: 100%;
+    width: 100%;
+    border-radius: 100%;
+    color: white;
+    background-color: rgba(0,0,0,0.5);
+    -webkit-transition: opacity 0.5s;
+            transition: opacity 0.5s;
+  }
+
+  &.add {
+
+    &:hover {
+      .change-image-message {
+        opacity: 100;
+      }
+    }
+  }
+
 }
 
 .no-profile-picture {
@@ -474,7 +500,6 @@ form {
   justify-content: center;
   border-radius: 100%;
   background-color: #c2c2c2;
-  width: 30vw;
   width: 150px;
   height: 150px;
   margin: 15px;
