(feat) add duration time creating spot and time controller functions to handle the duration times

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -776,3 +776,13 @@ select {
 .pac-container:after {
   display: none !important;
 }
+
+.duration-input {
+  width: 138px;
+  display: inline-block;
+}
+
+input#start {
+  width: 300px;
+}
+
