--- a/splash/splash.css
+++ b/splash/splash.css
@@ -19,8 +19,21 @@ a {
   margin: 2%;
   display: inline-block;
 }
-.logo{
-
+.logo {
+}
+.tech {
+  overflow: auto;
+  position: relative;
+  float: left;
+  width: 100px;
+  height: 100px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.tech-logo {
+  max-width: 100%;
+  max-height: 100%;
 }
 #banner{
   background-color: rgb(144, 213, 181);
@@ -31,13 +44,14 @@ a {
 #app-name {
   font-size: 700%;
   text-align: center;
-  padding-top: 10%;
+  padding-top: 8%;
 }
 #tagline {
   text-align: center;
 }
 #description {
   text-align: center;
+  padding-bottom: 2%;
 }
 #logo {
   display: block;
