--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -598,7 +598,7 @@ form {
   border-radius: 10px;
   color: white;
   text-align: center;
-  padding: 2px;
+  padding: 2px 20px;
   cursor: pointer;
   box-shadow: 0px 0px 5px #888888;
 
