--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -431,6 +431,10 @@ form {
   max-width: 500px;
   -webkit-transition: all 0.5s;
           transition: all 0.5s;
+
+  form {
+    padding-top: 0px;
+  }
 }
 
 .chat-card {
@@ -616,6 +620,15 @@ form {
 .save-spot-button {
   width: 150px;
   float: left;
+}
+
+.close-login {
+  display: block;
+  position: relative;
+  left: calc(100% - 0.8em);
+  top: 0;
+  color: black;
+  text-decoration: none;
 }
 
 .profile-bio {
