--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -858,12 +858,12 @@ form {
   }
 }
 
-a.spot-view-creatorid, .map-view-userid, .search-view-creator {
+a.spot-view-creatorid, .map-view-userid, .search-view-creator, .following, .follower {
   color: black;
   text-decoration: none;
 }
 
-a.spot-view-creatorid:hover, .map-view-userid:hover, .search-view-creator:hover {
+a.spot-view-creatorid:hover, .map-view-userid:hover, .search-view-creator:hover, .following:hover, .follower:hover {
   text-decoration: underline;
 }
 
@@ -892,3 +892,12 @@ input#start {
 .spot-name-link:hover {
   cursor: pointer;
 }
+
+.followers-header, .following-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $color-dark;
+  color: white;
+}
+
