--- a/splash/css/splash.css
+++ b/splash/css/splash.css
@@ -98,6 +98,9 @@ h3.tagline {
   border-radius: 100%;
 }
 
+.tech {
+}
+
 .tech-name {
   text-align: center;
   font-size: 1.3em;
@@ -107,11 +110,14 @@ h3.tagline {
   height: 2em;
 }
 
-.tech-logo img{
+.tech-logo {
   display: flex;
   justify-content: center;
-  width: 80%;
-  height: 80%;
+}
+
+.tech-logo img{
+ height: 80%;
+ width: 80%;
 }
 
 .page-footer {
