--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -431,6 +431,9 @@ form {
 
 .share-card-container, .createView-card-container, .chat-card-container{
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 0px;
   left: 0px;
   height: 100%;
